<resources>
    <string name="app_name">Campus</string>

    <string name="sign_in">Sign In</string>
    <string name="please_log_in_to_your_account">Please log in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="Sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="please_enter_the_code_that_we_have_sent_to_you">Please enter the code that we have sent to you</string>
    <string name="please_enter_your_code_that_we_have_sent_to_you">Please enter your code that we have sent to you</string>
    <string name="email_address">Email Address</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91_9597448324">+91 9597448324</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP</string>
    <string name="resend_code">Resend Code</string>
    <string name="otp_verification_using_firebase">OTP verification using firebase</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="logout">Logout</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_number">Register Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="reg_number">Reg Number</string>
    <string name="profile_summary">Profile Summary</string>
    <string name="key_skills">Key Skills</string>
    <string name="class_x">Class X</string>
    <string name="percentage">Percentage</string>
    <string name="board">Board</string>
    <string name="school">School</string>
    <string name="city">City</string>
    <string name="class_xii">Class XII</string>
    <string name="update">Update</string>
    <string name="student">Student</string>
    <string name="batch">Batch</string>
    <string name="company_market">Company Market</string>
    <string name="job_description">Job Description</string>
    <string name="employment_type">Employment Type</string>
    <string name="job_role">Job Role</string>
    <string name="job_location">Job Location</string>
    <string name="hiring_process">Hiring Process</string>
    <string name="probation_period">Probation Period</string>
    <string name="salary_during_probation">Salary during probation</string>
    <string name="salary_after_probation">Salary after probation</string>
    <string name="bond_if_any">Bond (If any)</string>
    <string name="working_days_per_week">Working days per week</string>
    <string name="message_for_students">Message for students</string>
    <string name="eligibility_criteria">Eligibility Criteria</string>
    <string name="_12th_percentage">12th Percentage</string>
    <string name="graduation_percentage">Graduation Percentage</string>
    <string name="backlogs">Backlogs</string>
    <string name="post_job">Post Job</string>
    <string name="job_id">Job Id</string>
    <string name="company_name">Company Name</string>
    <string name="field_of_interest">Field of Interest\n</string>
    <string name="achievements">Achievements</string>
</resources>