<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Admin.AdminPostJobsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/admin_post_jobId"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/job_id"

                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_companyName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/company_name"

                android:maxLines="2"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_batch"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/batch"
                android:inputType="number"

                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_companyMarket"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/company_market"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_jobDescription"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/job_description"
                android:maxLines="150"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_employementType"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/employment_type"

                android:maxLines="100"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_jobRole"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/job_role"

                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_job_Location"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/job_location"

                android:maxLines="5"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_hiringProcess"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/hiring_process"

                android:maxLines="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_probationPeriod"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/probation_period"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_salaryduringProbation"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/salary_during_probation"
                android:inputType="number"
                android:maxLength="7"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_salaryafterProbation"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/salary_after_probation"

                android:inputType="number"
                android:maxLength="7"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_bond"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/bond_if_any"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_workingDaysPerWeek"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/working_days_per_week"
                android:inputType="number"
                android:maxLength="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_messageForStudents"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/message_for_students"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="150dp"
                android:text="@string/eligibility_criteria"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/admin_post_12thPercentage"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/_12th_percentage"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_graduationPercentage"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/graduation_percentage"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/admin_post_backLogs"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:hint="@string/backlogs"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/admin_post_jobsBtn"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="#FFBB86FC"
                android:text="@string/post_job"
                android:textAllCaps="false"

                android:textColor="#fff" />
        </LinearLayout>


    </ScrollView>

</FrameLayout>